--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,5 +1,5 @@
 files:
-  - source: /crowdin-poc/src/assets/i18n/en.json
-    translation: /crowdin-poc/src/assets/i18n/%two_letters_code%.json
+  - source: /src/assets/i18n/en.json
+    translation: /src/assets/i18n/%two_letters_code%.json
 project_id_env: CROWDIN_PROJECT_ID
 api_token_env: CROWDIN_PERSONAL_TOKEN
