--- a/crowdin.yml
+++ b/crowdin.yml
@@ -3,3 +3,4 @@ files:
     translation: /src/assets/i18n/%two_letters_code%.json
 project_id_env: CROWDIN_PROJECT_ID
 api_token_env: CROWDIN_PERSONAL_TOKEN
+preserve_hierarchy: true
