--- a/.github/workflows/crowdin.yml
+++ b/.github/workflows/crowdin.yml
@@ -17,10 +17,11 @@ jobs:
       uses: crowdin/github-action@1.0.4
       with:
         upload_translations: true
-        download_translations: false
+        download_translations: true
         config: './crowdin.yml'
         source: 'src/assets/i18n/en.json'
         translation: 'src/assets/i18n/%two_letters_code%.json'
       env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         CROWDIN_PROJECT_ID: ${{ secrets.CROWDIN_PROJECT_ID }}
         CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_PERSONAL_TOKEN }}
